--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     </head>
     <body>
             <h1>Hello World</h1>
-            <h3>from Tabish Ali Mughal</h3>
+            <br>
+            <img src="./me.jpg">
+            <br>
+            <h3>Tabish Ali Mughal</h3>
     </body>
 </html>
